<resources>
    <string name="app_name">AcmeCafe</string>
    <string name="preference_file_key">pt.up.fe.cmov16.client.clientapp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="credit_card_expiration_date">Credit card expiration date</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="name">Name</string>
    <string name="cart">cart</string>
    <string name="title_activity_make_request">MakeRequestActivity</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="buy">Buy</string>
    <string name="hashtag">#</string>
    <string name="product">Product</string>
    <string name="price">Price (€)</string>
    <string name="add_vouchers">Add vouchers</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total</string>
    <string name="welcome_to_acme_caf">Welcome to Acme Café</string>
    <string name="edit_costumer">edit costumer</string>
    <string name="title_activity_costumer_edition">Edit Info</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="edit_costumer_info">Edit Costumer Info</string>
    <string name="confirm">Confirm</string>
</resources>
