<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_to_acme_caf"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/blue_border"
        android:text="@string/login" />

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_border"
        android:text="@string/register" />
</LinearLayout>