<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.up.fe.cmov16.client.clientapp.MainActivity">

    <TextView
        android:textColor="@color/colorPrimary"
        android:id="@+id/inscricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <EditText
        android:textColor="@color/colorPrimary"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inscricao"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:paddingTop="10dp"
        android:textSize="18sp" />

    <EditText
        android:textColor="@color/colorPrimary"
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:hint="@string/username"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:paddingTop="10dp"
        android:textSize="18sp" />

    <EditText
        android:textColor="@color/colorPrimary"
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username"
        android:hint="@string/password"
        android:inputType="textPassword|textNoSuggestions"
        android:paddingTop="10dp"
        android:textSize="18sp" />

    <EditText
        android:textColor="@color/colorPrimary"
        android:id="@+id/cardNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:hint="@string/credit_card_number"
        android:inputType="number"
        android:paddingTop="10dp"
        android:textSize="18sp" />

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/cardVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardNum"
        android:background="@drawable/blue_border"
        android:layout_marginBottom="10dp"
        android:text="@string/credit_card_expiration_date"
        android:textSize="18sp" />

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cardVal"
        android:background="@drawable/blue_border"
        android:text="@string/register" />

</RelativeLayout>
