<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pt.up.fe.cmov16.client.clientapp.ui.CartActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="false"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hashtag" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/product" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/price" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_items_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/total_price_card"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ll"
        android:scrollbars="vertical" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/total_price_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cart_buy_button"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="false"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="5"
                android:text="@string/total" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:id="@+id/total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/cart_buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:background="@drawable/blue_border"
        android:layout_margin="4dp"
        android:text="@string/buy" />

    <Button
        android:layout_margin="4dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:background="@drawable/blue_border"
        android:textColor="@color/colorPrimary"
        android:id="@+id/add_vouchers_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/cart_buy_button"
        android:layout_toStartOf="@+id/cart_buy_button"
        android:text="@string/add_vouchers" />

</RelativeLayout>
