<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pt.up.fe.cmov16.client.clientapp.ui.CostumerEdition">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:text="@string/edit_costumer_info"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/username"
        android:hint="new password?"
        android:inputType="textPassword|textNoSuggestions"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/cardNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:hint="@string/credit_card_number"
        android:inputType="number"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cardVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardNum"
        android:layout_marginBottom="10dp"
        android:background="@drawable/blue_border"
        android:text="@string/credit_card_expiration_date"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/confirm_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardVal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/blue_border"
        android:text="@string/confirm"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
